Developed by root path. Implemented navbar. Refactored controllers for registration and authorization

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -2,30 +2,36 @@ ru:
   hello: "Привет, мир!"
 
   activerecord:
+    attributes:
+      user:
+        name: "Имя"
+        email: "Email"
+        password: "Пароль"
+        password_confirmation: "Подтверждение пароля"
     errors:
       models:
         user:
           attributes:
             name:
-              blank: "Поле с именем должно быть заполненным"
-              too_short: "Имя должно быть больше %{count} символов"
-              too_long: "Имя должно быть меньше %{count} символов"
-              invalid: "Имя должно состоять только из букв"
+              blank: "не может быть пустым"
+              too_short: "слишком короткое (минимум %{count} символов)"
+              too_long: "слишком длинное (максимум %{count} символов)"
+              invalid: "содержит недопустимые символы"
             email:
-              blank: "Поле email должно быть заполненным"
-              taken: "Пользователь с таким email уже есть"
-              invalid: "Неправильный формат email"
-              too_short: "Электронных почт такой длины не существует"
+              blank: "не может быть пустым"
+              taken: "уже занят"
+              invalid: "имеет неверный формат"
+              too_short: "слишком короткий (минимум %{count} символов)"
+              too_long: "слишком длинный (максимум %{count} символов)"
             password:
-              blank: "Поле пароля должно быть заполненным"
-              too_short: "Длина пароля не должна быть меньше %{count} символов"
-              too_long: "Длина пароля не должна быть больше %{count} символов"
-              invalid: "Пароль должен содержать хотя бы одну цифру, одну заглавную и одну строчную букву"
-              confirmation: "Пароли не совпадают"
+              blank: "не может быть пустым"
+              confirmation: "не совпадает с подтверждением"
+              too_short: "слишком короткий (минимум %{count} символов)"
+              too_long: "слишком длинный (максимум %{count} символов)"
+              invalid: "должен содержать хотя бы одну цифру, одну заглавную и одну строчную букву"
             password_confirmation:
-              blank: "Поле подтверждения пароля должно быть заполненным"
-            role:
-              inclusion: "Роль может быть только: customer или admin"
+              confirmation: "не совпадает с паролем"
+              blank: "должно быть заполненным"
         
         product:
           attributes:
